# omega-runtime

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  omega_studio.spec  omega_studio_cli.spec  pyproject.toml  requirements-cuda.txt  requirements-dml.txt  requirements-vulkan.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api_reference.md  code_signing.md  operator_handbook.md
models/: .gitkeep
packaging/: omega3-portable.iss
pyi_support/: DIST_README.txt  cli_launcher.py  gui_launcher.py  pyi_common.py  run-server.bat
scripts/: bootstrap_embedded_python.ps1  build_prototype_bundle.ps1  build_release.ps1  build_variants.ps1  build_windows.ps1  create_portable_venv.ps1  release_manifest.ps1  sign_windows.ps1  sync_lemonade_vendor.ps1  sync_vendor_accelerators.ps1
src/omega_studio/: __init__.py  __main__.py  cli.py  config.py  gui_settings_store.py  paths.py  (+2 more)
tests/: test_admin_models.py  test_api_auth_streaming.py  test_app_version.py  test_backends.py  test_bundle_dependencies.py  test_cli_daemon_logging.py  test_daemon_stop.py  test_drain.py  test_gui_settings_store.py  test_hf_download.py  test_hub_jobs_persistence.py  test_hub_progress.py  test_inference_engine.py  test_onnx_backend.py  test_onnx_embedding.py  test_registry.py  test_registry_runtime_overlays.py  test_request_id_middleware.py  test_resource_manager.py  test_thinking_parser.py  test_tool_call_repair.py  test_variant_build.py
(+29 files in other folders)
