[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega3-portable"
version = "0.1.0"
description = "Omega Runtime Studio — sovereign local model control plane (OpenAI-compatible API + PySide6 GUI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "typer>=0.12",
  "PySide6>=6.6",
  "huggingface_hub>=0.23",
  "tqdm>=4.66",
  "psutil>=5.9",
  "llama-cpp-python>=0.2.85",
  "tokenizers>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
cuda = ["onnxruntime-gpu>=1.18,<2.0"]
dml = ["onnxruntime-directml>=1.18,<2.0"]
vulkan = []

[project.scripts]
omega3-portable = "omega_studio.cli:main"
omega3-portable-gui = "omega_studio.gui.main_window:main"
omega-studio = "omega_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
